fix z-index on avatar

--- a/src/components/UserInfo/UserInfo.module.css
+++ b/src/components/UserInfo/UserInfo.module.css
@@ -38,7 +38,6 @@
   background-color: transparent;
   transition: 0.3s ease-in-out border-color;
   border: 2px dashed transparent;
-  z-index: 1;
 }
 
 .changeAvatarWrapper:hover,
@@ -53,7 +52,6 @@
   height: 100%;
   opacity: 0;
   cursor: pointer;
-  z-index: 2;
 }
 
 .changeAvatarLabel {
@@ -84,6 +82,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
 .changeAvatarLabel::after {
   transform: translate(-50%, -50%) rotate(90deg);
 }
@@ -91,6 +90,7 @@
 .changeAvatarLabel.loading {
   display: none;
 }
+
 .userName {
   font-size: 18px;
   font-weight: 800;
